--- a/frontend/src/styles/Register.module.css
+++ b/frontend/src/styles/Register.module.css
@@ -89,3 +89,13 @@
     box-shadow: 0px 0px 25px #ff00ff;
   }
 }
+
+
+.successMsg {
+  color: #39ff14;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 1rem;
+  text-shadow: 0 0 6px #39ff14, 0 0 12px #00ff80;
+  animation: fadeInOut 1s ease-in-out;
+}
